feat(dotAI): Adding fallback mechanism when it comes to send models to AI Provider (OpenAI)
Refs: #29284