@@ -1,5 +1,6 @@
 package com.dotcms.ai.workflow;
 
+import com.dotcms.ai.app.AppConfig;
 import com.dotcms.ai.app.ConfigService;
 import com.dotmarketing.portlets.workflows.actionlet.Actionlet;
 import com.dotmarketing.portlets.workflows.actionlet.WorkFlowActionlet;
@@ -9,7 +10,6 @@ import com.dotmarketing.portlets.workflows.model.WorkflowActionClassParameter;
 import com.dotmarketing.portlets.workflows.model.WorkflowActionFailureException;
 import com.dotmarketing.portlets.workflows.model.WorkflowActionletParameter;
 import com.dotmarketing.portlets.workflows.model.WorkflowProcessor;
-import com.google.common.collect.ImmutableList;
 
 import java.util.List;
 import java.util.Map;
@@ -24,7 +24,7 @@ public class OpenAIAutoTagActionlet extends WorkFlowActionlet {
 
         WorkflowActionletParameter overwriteParameter = new MultiSelectionWorkflowActionletParameter(OpenAIParams.OVERWRITE_FIELDS.key,
                 "Overwrite  tags ", Boolean.toString(true), true,
-                () -> ImmutableList.of(
+                () -> List.of(
                         new MultiKeyValue(Boolean.toString(false), Boolean.toString(false)),
                         new MultiKeyValue(Boolean.toString(true), Boolean.toString(true)))
         );
@@ -32,16 +32,26 @@ public class OpenAIAutoTagActionlet extends WorkFlowActionlet {
         WorkflowActionletParameter limitTagsToHost = new MultiSelectionWorkflowActionletParameter(
                 OpenAIParams.LIMIT_TAGS_TO_HOST.key,
                 "Limit the keywords to pre-existing tags", "Limit", false,
-                () -> ImmutableList.of(
+                () -> List.of(
                         new MultiKeyValue(Boolean.toString(false), Boolean.toString(false)),
                         new MultiKeyValue(Boolean.toString(true), Boolean.toString(true))
                 )
         );
+
+        final AppConfig appConfig = ConfigService.INSTANCE.config();
         return List.of(
                 overwriteParameter,
                 limitTagsToHost,
-                new WorkflowActionletParameter(OpenAIParams.MODEL.key, "The AI model to use, defaults to " + ConfigService.INSTANCE.config().getModel().getCurrentModel(), ConfigService.INSTANCE.config().getModel().getCurrentModel(), false),
-                new WorkflowActionletParameter(OpenAIParams.TEMPERATURE.key, "The AI temperature for the response.  Between .1 and 2.0.", ".1", false)
+                new WorkflowActionletParameter(
+                        OpenAIParams.MODEL.key,
+                        "The AI model to use, defaults to " + appConfig.getModel().getCurrentModel(),
+                        appConfig.getModel().getCurrentModel(),
+                        false),
+                new WorkflowActionletParameter(
+                        OpenAIParams.TEMPERATURE.key,
+                        "The AI temperature for the response.  Between .1 and 2.0.",
+                        ".1",
+                        false)
         );
     }
 
@@ -62,6 +72,5 @@ public class OpenAIAutoTagActionlet extends WorkFlowActionlet {
 
         new OpenAIAutoTagRunner(processor, params).run();
     }
-
 
 }
